--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "yum"]
 	path = yum
 	url = git@github.com:opscode-cookbooks/yum.git
+[submodule "python"]
+	path = python
+	url = git@github.com:opscode-cookbooks/python.git
